<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ImapNotes2k</string>
    <string name="account">Account</string>
    <string name="titleNew">New</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="account_removed">Account has been removed</string>
    <string name="quotation_marks_not_allowed">Quotation marks are not allowed in accountname</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="check_and_create_account"><![CDATA[Check & Create Account]]></string>
    <string name="logging_in">"Logging into your account… "</string>
    <string name="account_already_exists_or_is_null">Account already exists or is null</string>
    <string name="account_added">Account has been added</string>
    <string name="add_account">Add Account</string>
    <string name="account_name">Account name</string>
    <string name="choose_a_name_for_this_account">Choose a name for this account</string>
    <string name="username">Username</string>
    <string name="your_login_name">Your login name</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="server">Server</string>
    <string name="imap_notes_server">IMAP notes server</string>
    <string name="server_port_number_to_use">Server port number to use</string>
    <string name="sync_interval_minutes">Sync Interval (minutes)</string>
    <string name="sync_interval_for_this_account_in_minutes">sync interval for this account (in minutes)</string>
    <string name="notes_folder_optional">Notes Folder (optional)</string>
    <string name="manually_set_full_imap_path_to_notes_folder">Manually set full IMAP path to notes folder</string>
    <string name="use_sticky_notes">Use Sticky Notes</string>
    <string name="welcome">Welcome</string>
    <string name="select_account">Select account to view or edit</string>
    <string name="note_title">Note Title</string>
    <string name="delete">Delete</string>
    <string name="color">Color</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="green">Green</string>
    <string name="syncing">Syncing...</string>
    <string name="refreshing_notes_list">"Refreshing notes list... "</string>
    <string name="updating_notes_list">"Updating notes list... "</string>
    <string name="default_sync_interval">15</string>
    <string name="editAccount">Edit Account</string>
    <string name="device_name">Device name</string>
    <string name="choose_a_name_for_this_device">Choose a name for this device.</string>
</resources>
