<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/login"
        android:icon="@drawable/ic_action_login"
        android:showAsAction="ifRoom"
        android:title="@string/account" />

    <item
        android:id="@+id/newnote"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/titleNew" />

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh" />

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"
        android:title="@string/about" />

</menu>
