<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/add_account"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/accountnameEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:hint="@string/choose_a_name_for_this_account"
            android:inputType="textEmailAddress">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:hint="@string/your_login_name"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/serverEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:hint="@string/imap_notes_server"
            android:inputType="textNoSuggestions|text|textVisiblePassword" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Security"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/securitySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Port Number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/portnumEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:ems="10"
            android:hint="@string/server_port_number_to_use"
            android:inputType="number"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_interval_minutes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/syncintervalEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:ems="10"
            android:hint="@string/sync_interval_for_this_account_in_minutes"
            android:inputType="number"
            android:text="15"
            android:textColor="#000000">

        </EditText>

        <TextView
            android:id="@+id/folderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes_folder_optional"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/folderEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:hint="@string/manually_set_full_imap_path_to_notes_folder"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/stickyCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_sticky_notes" />


        <CheckBox
            android:id="@+id/automaticMergeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Store versions of the notes so that they can be edited on several devices at the same time and merged together" />

        <!-- <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:onClick="DoLogin"
            android:text="Login" >
        </Button> -->

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

</ScrollView>
